--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ defaults:
     values:
       image: true
 
+include: [".well-known"]
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
